--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
    <meta charset="utf-8">
 	<title>Crist0_4</title>
-	<meta name="description" content="portfolio of Daniel Burke">
-	<meta name="author" content="Daniel Burke">
+	<meta name="description" content="Introduction Of Anshuman">
+	<meta name="author" content="Anshuman">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
