--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="https://github.com/Crist0-4"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://github.com/Crist04"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/anshuman.pandey__/"><i class="fa fa-instagram"></i></a></li>
             </ul>
 
